# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: nodepy.yml
gendiff/: Promejhutok.py  __init__.py  collect_diff.py  parsing.py  to_json_value.py
gendiff/formatting/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  parsing.py
src/scripts/: gendiff.py
tests/: test_gendiff.py  test_json.py  test_parsing.py  test_plain.py  test_promejhutok.py  test_stylish.py
tests/fixtures/: collected_differences.py
tests/fixtures/json/flat/: collected_diff_1_2.json
tests/fixtures/json/tree/: collected_diff_1_2.json  collected_diff_3_4.json  file1.json  file2.json
tests/fixtures/yaml/tree/: file1.yaml  file2.yaml
tests/fixtures/yaml_format/: file1.yml
