[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["lingalo <bokova.nast@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "src.scripts.gendiff:main"